Prevent line break in column: 'municipio'

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -2,6 +2,10 @@ table {
     border-collapse: collapse;
 }
 
+.no-break {
+    white-space: nowrap;
+}
+
 .inline{
     display: inline-block;
     margin-top: 5px;
